wso2-k8s/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: wso2-svc
  namespace: wso2
  labels:
    app: wso2-identity-server
    app.kubernetes.io/name: wso2-identity-server
    app.kubernetes.io/instance: wso2-identity-server
    app.kubernetes.io/version: "latest"
spec:
  type: ClusterIP
  ports:
    - port: 9443
      targetPort: 9763
      protocol: TCP
      name: wso2-identity-server
  selector:
    app.kubernetes.io/name: wso2-identity-server
    app.kubernetes.io/instance: wso2-identity-server
